fix some css layout issues

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,11 +5,9 @@
 
  /* width */
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 5px;
   }
   
-  
-   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: $secondary-color; 
